src/styles/Contact.css
.contact {
  background-color: var(--darkest);
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 86vh;
}

.contact-title {
  color: var(--lightest);
}

.contactForm {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  background-color: var(--dark);
  padding: 20px;
  border: 5px solid var(--light);
  border-radius: 10px;
  height: 70vh;
  width: 40vw;
}

.custom-input {
  background-color: var(--light);
  margin-bottom: 10px;
  width: 30vw;
}

.contactForm label {
  margin-bottom: 5px;
  margin-right: 5px;
  color: var(--lightest);
}

.message-div {
  display: flex;
  align-items: center;
}

.submit-btn {
  background-color: var(--lightest);
  color: var(--dark);
  border: 2px solid var(--lightest);
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
  transition: background-color 0.3s ease;
}

.submit-btn:hover {
  background-color: var(--light);
  color: var(--darkest);
}

